# app/router.go
@@ -9,7 +9,7 @@ import (
 	"github.com/julienschmidt/httprouter"
 )
 
-func NewRouter(authHandler *controller.AuthHandler, userController controller.UserController) *httprouter.Router {
+func NewRouter(authHandler *controller.AuthHandler, userController controller.UserController, accountController controller.AccountController) *httprouter.Router {
 	router := httprouter.New()
 
 	router.HandlerFunc("POST", "/register", authHandler.Register)
@@ -23,6 +23,11 @@ func NewRouter(authHandler *controller.AuthHandler, userController controller.Us
 	adminRouter.POST("/users", userController.Create)
 	adminRouter.PUT("/users/:userId", userController.Update)
 	adminRouter.DELETE("/users/:userId", userController.Delete)
+	adminRouter.GET("/accounts", accountController.FindAll)
+	adminRouter.GET("/accounts/:accountId", accountController.FindById)
+	adminRouter.POST("/accounts", accountController.Create)
+	adminRouter.PUT("/accounts/:accountId", accountController.Update)
+	adminRouter.DELETE("/accounts/:accountId", accountController.Delete)
 
 	adminHandler := middleware.AuthRoleMiddleware(domain.RoleAdmin)(middleware.StripPrefix("/api/admin", adminRouter))
 	for _, method := range []string{"GET", "POST", "PUT", "PATCH", "DELETE"} {
@@ -32,6 +37,8 @@ func NewRouter(authHandler *controller.AuthHandler, userController controller.Us
 	userRouter := httprouter.New()
 	userRouter.GET("/profile", userController.GetMe)
 	userRouter.PUT("/profile", userController.UpdateMe)
+	userRouter.GET("/accounts", accountController.GetMyAccounts)
+	userRouter.GET("/accounts/:accountId", accountController.GetMyAccountById)
 
 	userHandler := middleware.AuthRoleMiddleware(domain.RoleAdmin, domain.RoleUser)(middleware.StripPrefix("/api/user", userRouter))
 	for _, method := range []string{"GET", "POST", "PUT", "PATCH", "DELETE"} {
