# helper/model.go
@@ -23,3 +23,21 @@ func ToUserResponses(users []domain.User) []web.UserResponse {
 	}
 	return userResponses
 }
+
+func ToAccountResponse(account domain.Account) web.AccountResponse {
+	return web.AccountResponse{
+		Id:          account.Id,
+		UserId:      account.UserId,
+		AccountBank: account.AccountBank,
+		Balance:     account.Balance,
+		AccountType: string(account.AccountType),
+	}
+}
+
+func ToAccountResponses(accounts []domain.Account) []web.AccountResponse {
+	var accountResponses []web.AccountResponse
+	for _, account := range accounts {
+		accountResponses = append(accountResponses, ToAccountResponse(account))
+	}
+	return accountResponses
+}
